--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="./sharetool.html">Share Tool Free</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./huongdansudung.html">Hướng dẫn sử dụng</a>
+                            <a class="nav-link" href="#">Hướng dẫn sử dụng</a>
                         </li>
 
                         <li class="nav-item">
@@ -149,7 +149,11 @@
         </div>
 
         <!-- Script -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"
+        ></script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
