--- a/sharetool.html
+++ b/sharetool.html
@@ -43,7 +43,7 @@
                             <a class="nav-link active" href="./sharetool.html">Share Tool Free</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./huongdansudung.html">Hướng dẫn sử dụng</a>
+                            <a class="nav-link" href="#">Hướng dẫn sử dụng</a>
                         </li>
 
                         <li class="nav-item">
@@ -74,8 +74,10 @@
                             <h5 class="card-title">Môn Triết học</h5>
                             <p class="card-text">Sử dụng <mark>Tool 3</mark> chỉ cần bôi đen đoạn chữ là hiện đáp án <br />Lưu ý: xin quyền để <mark>Download file</mark></p>
                             <div class="d-flex">
-                                <a class="btn btn-primary" href="https://drive.google.com/file/d/1GnbIXqDfX0BJDhF9z7QsYku7FodNk7sW/view?usp=drive_link" target="_blank">Tải xuống miễn phí</a>
-                                <a class="btn btn-danger mx-2" href="./huongdansudung.html" target="_blank">Cách sử dụng</a>
+                                <a class="btn btn-primary" href="https://drive.google.com/file/d/1SZyBVSXkiJ16muVmHzI-6S4VDwBL9tcO/view?usp=drive_link" target="_blank"
+                                    >Tải xuống miễn phí</a
+                                >
+                                <a class="btn btn-danger mx-2" href="#" target="_blank">Cách sử dụng</a>
                             </div>
                             <p class="card-text mt-2"><small class="text-muted text-countera"></small></p>
                         </div>
@@ -88,8 +90,10 @@
                             <h5 class="card-title">Môn Triết học</h5>
                             <p class="card-text">Sử dụng <mark>Tool 1</mark> copy paste <br />Lưu ý: nhớ giải nén</p>
                             <div class="d-flex">
-                                <a class="btn btn-primary" href="https://drive.google.com/file/d/1sxC6jgSkF-lVNevSrSmzgcwzbylIGTyS/view?usp=drive_link" target="_blank">Tải xuống miễn phí</a>
-                                <a class="btn btn-danger mx-2" href="./huongdansudung.html" target="_blank">Cách sử dụng</a>
+                                <a class="btn btn-primary" href="https://drive.google.com/file/d/1gz7OrVn0mQTPHhPFibpvhKP6vCIE4LZ4/view?usp=drive_link" target="_blank"
+                                    >Tải xuống miễn phí</a
+                                >
+                                <a class="btn btn-danger mx-2" href="#" target="_blank">Cách sử dụng</a>
                             </div>
                             <p class="card-text mt-2"><small class="text-muted text-counterb"></small></p>
                         </div>
@@ -131,7 +135,11 @@
             </div>
         </div>
         <!-- Script -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"
+        ></script>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
