--- a/sharetool.html
+++ b/sharetool.html
@@ -123,12 +123,12 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./img/Tool1.gif" class="card-img-top" alt="..." />
+                        <img src="./img/bg-exam.png" class="card-img-top" alt="..." />
                         <div class="card-body">
-                            <h5 class="card-title">Môn Tư tưởng HCM</h5>
-                            <p class="card-text">Sử dụng <mark>Tool 1</mark> copy paste</p>
-                            <button class="btn btn-primary" disabled>Tải xuống miễn phí</button>
-                            <p class="card-text mt-2"><small class="text-muted text-counterd">Cập nhật 5 ngày trước</small></p>
+                            <h5 class="card-title">Thi thử môn Chủ nghĩa xã hội khoa học</h5>
+                            <p class="card-text">Tạo 1 môi trường giả lập thi trên Exam</p>
+                            <a class="btn btn-danger" href="./Chủ nghĩa xã hội khoa học.html">Thi thử</a>
+                            <p class="card-text mt-2"><small class="text-muted text-counter-exten"></small></p>
                         </div>
                     </div>
                 </div>
