--- a/sharetool.html
+++ b/sharetool.html
@@ -14,8 +14,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous"
-        />
+            crossorigin="anonymous" />
         <title>Share Tool Miễn Phí</title>
     </head>
     <body>
@@ -30,8 +29,7 @@
                     data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent"
                     aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -67,6 +65,18 @@
         <!--Main Navigation-->
         <div class="product p-5">
             <div class="container row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./img/Tool1.gif" class="card-img-top" alt="..." />
+                        <div class="card-body">
+                            <h5 class="card-title">Môn Kinh tế chính trị</h5>
+                            <p class="card-text">Sử dụng <mark>Tool 1</mark> bôi đen ra đáp án</p>
+                            <a class="btn btn-danger" href="./itest/iTest - Giải pháp toàn diện cho tổ chức thi.html">Thi thử</a>
+
+                            <p class="card-text mt-2"><small class="text-muted text-counter-kttt">Cập nhật 5 ngày trước</small></p>
+                        </div>
+                    </div>
+                </div>
                 <div class="col">
                     <div class="card h-100">
                         <img src="./img/Tool3.gif" class="card-img-top" alt="..." />
@@ -135,8 +145,7 @@
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"
-        ></script>
+            crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 
         <script src="main.js"></script>
