--- a/sharetool.html
+++ b/sharetool.html
@@ -67,6 +67,17 @@
             <div class="container row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card h-100">
+                        <img src="https://sachluat.com.vn/hoanghung/5/images/7be61795aa597f072648.jpg" class="card-img-top" alt="..." />
+                        <div class="card-body">
+                            <h5 class="card-title">Pháp luật đại cương</h5>
+                            <a class="btn btn-danger" href="./pldc/iTest - Giải pháp toàn diện cho tổ chức thi.html">Thi thử</a>
+
+                            <p class="card-text mt-2"><small class="text-muted text-counter-pldc">Cập nhật 5 ngày trước</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQE_0OgWDj8Hf_5HaDChgWl6ZPkZ0HvMJEZow&s" class="card-img-top" alt="..." />
                         <div class="card-body">
                             <h5 class="card-title">Tiếng anh chuẩn đầu ra</h5>
