--- a/sharetool.html
+++ b/sharetool.html
@@ -70,7 +70,7 @@
                         <img src="https://file1.dangcongsan.vn/data/0/images/2024/04/23/upload_59/11111.gif?dpi=150&quality=100&w=800" class="card-img-top" alt="..." />
                         <div class="card-body">
                             <h5 class="card-title">Tư tưởng HCM</h5>
-                            <a class="btn btn-danger" href="./pldc/iTest - Giải pháp toàn diện cho tổ chức thi.html">Thi thử</a>
+                            <a class="btn btn-danger" href="./tthcm/iTest - Giải pháp toàn diện cho tổ chức thi.html">Thi thử</a>
 
                             <p class="card-text mt-2"><small class="text-muted text-counter-tthcm">Cập nhật 5 ngày trước</small></p>
                         </div>
